@@ -1042,3 +1042,4 @@ Directories containing initial files for virtual servers (like /etc/skel) are no
 ---- Changes since 3.65 ----
 Added API commands to create, modify, delete and extract settings from virtual server templates.
 Updated the phpMyAdmin script installer to version 3.1.2.
+Added the info.pl command line script, for dumping general information about Virtualmin.
